DDIS_Project/k8s/backend-deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddis
  template:
    metadata:
      labels:
        app: ddis
    spec:
      containers:
        - name: ddis-backend
          image: tommy896989/k8s_ddis_boot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
