DDIS_Project/k8s/mariadb.yml
# mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddis-db
  template:
    metadata:
      labels:
        app: ddis-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          emptyDir: {}
