DDIS_Project/k8s/redis.yml
# redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddis-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddis-redis
  template:
    metadata:
      labels:
        app: ddis-redis
    spec:
      containers:
        - name: redis
          image: redis:7.0
          ports:
            - containerPort: 6379
