DDIS_Project/k8s/backend-service.yml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddis-service
spec:
  type: ClusterIP
  selector:
    app: ddis
  ports:
    - port: 8001
      targetPort: 8080
