DDIS_Project/k8s/mariadb-service.yml
# mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddis-db-service
spec:
  selector:
    app: ddis-db
  ports:
    - port: 3306
      targetPort: 3306
