DDIS_Project/k8s/redis-service.yml
# redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddis-redis-service
spec:
  selector:
    app: ddis-redis
  ports:
    - port: 6379
      targetPort: 6379
